--- a/index.html
+++ b/index.html
@@ -14,21 +14,33 @@
         <header class="header">
             <div class="container">
                 <div class="header-inner">
-                    <div class="menu">
+                    <nav class="menu">
+
+                      <button class="menu__btn">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                      </button>  
+
                         <ul class="menu-list__right">
-                            <li class="menu-list__item"> <a href="#">Иврит<img src="img/israel-flag-icon.png" alt="flag" class="menu-list__item-img"></a></li>
+                            <li class="menu-list__item"> <a class="menu__list-link" href="#">Иврит<img src="img/israel-flag-icon.png" alt="flag" class="menu-list__item-img"></a></li>
                             <li class="menu-list__item-here">Все продукты</li>
-                            <li class="menu-list__item"> <a href="#">Рецепты</a> </li>
+                            <li class="menu-list__item"> <a class="menu__list-link" href="#">Рецепты</a> </li>
                         </ul>
-                        </div>
-                        <img src="img/logo.svg" alt="logo" class="menu-logo">
-                        <div class="menu">
+
+                    </nav>
+
+                    <img src="img/logo.svg" alt="logo" class="menu-logo">
+
+                    <nav class="menu">
                         <ul class="menu-list__left">
-                            <li class="menu-list__item"><a href="./html/delivery.html">Доставка</a></li>
-                            <li class="menu-list__item"><a href="#">Оплата</a></li>
-                            <li class="menu-list__item"><a href="#">Корзина</a></li>
+                            <li class="menu-list__item"><a class="menu__list-link" href="./html/delivery.html">Доставка</a></li>
+                            <li class="menu-list__item"><a class="menu__list-link" href="#">Оплата</a></li>
+                            <li class="menu-list__item"><a class="menu__list-link" href="#">Корзина</a></li>
                         </ul>
-                    </div>
+                        
+                    </nav>
+
                     </div>
                 </div>
         </header>
