--- a/html/delivery.html
+++ b/html/delivery.html
@@ -29,9 +29,10 @@
                     <nav class="menu">
                     <ul class="menu__ul">
                     <li class="menu-list__item"> <a class="menu__list-link" href="#">Иврит<img src="../img/israel-flag-icon.png" alt="flag" class="menu-list__item-img"></a></li>
-                    <li class="menu-list__item-here">Все продукты</li>
-                    <li class="menu-list__item"> <a class="menu__list-link" href="#">Рецепты</a> </li>
-                    <li class="menu-list__item"><a class="menu__list-link" href="./html/delivery.html">Доставка</a></li>
+                    <li class="menu-list__item"><a class="menu__list-link" href="../index.html">Все продукты</a></li>
+                    <li class="menu-list__item"> <a class="menu__list-link" href="#">Рецепты</a> 
+                    </li>
+                    <li class="menu-list__item-here">Доставка</li>
                     <li class="menu-list__item"><a class="menu__list-link" href="#">Оплата</a></li>
                     </ul>
                   </nav>
